[gd_scene load_steps=16 format=3 uid="uid://vp148srndi7g"]

[ext_resource type="Script" path="res://scripts/bike.gd" id="1_ead6k"]
[ext_resource type="ArrayMesh" uid="uid://cmqlocxmmukja" path="res://assets/Tracer/Tracer-0-Tracer.obj" id="1_wivye"]
[ext_resource type="AudioStream" uid="uid://blxgi52abhnh0" path="res://audio/PodRacer_StopExit.wav" id="2_33nqs"]
[ext_resource type="AudioStream" uid="uid://crb1ssci4dult" path="res://audio/PodRacer_Rattle.wav" id="3_4ilyw"]
[ext_resource type="Shader" path="res://shaders/retro.gdshader" id="3_gvqfj"]
[ext_resource type="AudioStream" uid="uid://cy11yhdukriyu" path="res://audio/PodRacer_MainHum.wav" id="4_62kcq"]
[ext_resource type="AudioStream" uid="uid://dnt7dkmcie2vu" path="res://audio/PodRacer_Accelleration.wav" id="5_yyfmj"]

[sub_resource type="Animation" id="Animation_yd4br"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RattleAudio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_rhs35"]
resource_name = "RattleStart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RattleAudio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, -5.0]
}

[sub_resource type="Animation" id="Animation_5g7bh"]
resource_name = "RattleStop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RattleAudio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uc7x8"]
_data = {
"RESET": SubResource("Animation_yd4br"),
"RattleStart": SubResource("Animation_rhs35"),
"RattleStop": SubResource("Animation_5g7bh")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_2o536"]
size = Vector3(0.911255, 3.64433, 0.895386)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_umxlb"]
render_priority = 0
shader = ExtResource("3_gvqfj")

[sub_resource type="QuadMesh" id="QuadMesh_f2dtl"]
material = SubResource("ShaderMaterial_umxlb")

[sub_resource type="CylinderMesh" id="CylinderMesh_165tc"]
height = 0.3

[node name="Bike" type="VehicleBody3D"]
collision_layer = 10
collision_mask = 2
mass = 200.0
gravity_scale = 2.0
center_of_mass_mode = 1
center_of_mass = Vector3(-0.958774, -0.162638, 0)
inertia = Vector3(1000, 500, 525)
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ead6k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uc7x8")
}

[node name="HitAudioPlayers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.782428, 0, 0)

[node name="HitAudioPlayer" type="AudioStreamPlayer3D" parent="HitAudioPlayers"]
volume_db = 45.0
max_db = 6.0
max_distance = 50.0
bus = &"Bike"

[node name="HitAudioPlayer2" type="AudioStreamPlayer3D" parent="HitAudioPlayers"]
volume_db = 45.0
max_db = 6.0
max_distance = 50.0
bus = &"Bike"

[node name="HitAudioPlayer3" type="AudioStreamPlayer3D" parent="HitAudioPlayers"]
volume_db = 45.0
max_distance = 50.0
bus = &"Bike"

[node name="HitAudioPlayer4" type="AudioStreamPlayer3D" parent="HitAudioPlayers"]
volume_db = 45.0
max_db = 6.0
max_distance = 50.0
bus = &"Bike"

[node name="StopExitAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_33nqs")
volume_db = 6.0
max_distance = 50.0
bus = &"Bike"

[node name="RattleAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_4ilyw")
volume_db = -80.0
pitch_scale = 0.7
autoplay = true
max_distance = 50.0
bus = &"Bike"

[node name="MainHumAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_62kcq")
volume_db = -80.0
pitch_scale = 1.14
autoplay = true
max_distance = 50.0
bus = &"Bike"

[node name="AccellerationAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_yyfmj")
volume_db = 7.0
max_distance = 50.0
bus = &"Bike"

[node name="Tracer-0-tracer" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.9782, 0, 0)
mesh = ExtResource("1_wivye")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.969564, 0.0911579, 0)
shape = SubResource("BoxShape3D_2o536")

[node name="SunRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 100)
debug_shape_thickness = 5

[node name="CameraPivot" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-4.29339e-08, 0.132775, -0.991146, 5.8038e-09, 0.991146, 0.132775, 1, -5.18634e-11, -4.33244e-08, -1.95, 1.1, 0)
fov = 102.3
near = 0.1
far = 10000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.06888, -0.109489)
visible = false
mesh = SubResource("QuadMesh_f2dtl")
skeleton = NodePath("../..")

[node name="AudioListener3D" type="AudioListener3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="GetOffPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65224, 0.0746566, 1.3)

[node name="FrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.502706, -0.823132, 1.5)
wheel_roll_influence = 0.01
wheel_rest_length = 0.6
wheel_friction_slip = 2.0
suspension_travel = 0.4
suspension_stiffness = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrontRight"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_165tc")

[node name="FrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.502706, -0.823132, -1.6)
wheel_roll_influence = 0.01
wheel_rest_length = 0.6
wheel_friction_slip = 2.0
suspension_travel = 0.4
suspension_stiffness = 70.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="FrontLeft"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_165tc")
skeleton = NodePath("../../FrontRight")

[node name="RearRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.39952, -0.870832, 1.5)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_rest_length = 0.6
wheel_friction_slip = 10.0
suspension_travel = 0.4
suspension_stiffness = 70.0

[node name="MeshInstance3D4" type="MeshInstance3D" parent="RearRight"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_165tc")
skeleton = NodePath("../../FrontRight")

[node name="RearLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.39952, -0.870832, -1.6)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_rest_length = 0.6
wheel_friction_slip = 10.0
suspension_travel = 0.4
suspension_stiffness = 70.0

[node name="MeshInstance3D5" type="MeshInstance3D" parent="RearLeft"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_165tc")
skeleton = NodePath("../../FrontRight")

[node name="Middle" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.21805, -0.871102, 0)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_rest_length = 0.6
wheel_friction_slip = 10.0
suspension_travel = 0.4
suspension_stiffness = 70.0

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Middle"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_165tc")
skeleton = NodePath("../../FrontRight")

[node name="Lights" type="Node3D" parent="."]

[node name="SpotLight" type="SpotLight3D" parent="Lights"]
transform = Transform3D(-4.37114e-08, 0.173648, -0.984808, 0, 0.984808, 0.173648, 1, 7.59039e-09, -4.30473e-08, 0.997065, 0.152203, 0)
light_color = Color(0.960784, 0.788235, 0.415686, 1)
light_energy = 8.0
light_indirect_energy = 0.0
shadow_enabled = true
spot_range = 150.0
spot_attenuation = 0.258818
spot_angle = 30.0
spot_angle_attenuation = 2.37842

[node name="HeadLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.98041, 0.100532, 0)
light_color = Color(0.792157, 0.517647, 0.0980392, 1)
light_energy = 8.0
omni_range = 0.44
omni_attenuation = 1.86607

[node name="UnderLight_1" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07433, -0.62138, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="UnderLight_5" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4283, -0.719966, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="UnderLight_4" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.259035, -0.62138, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="UnderLight_6" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.627041, -0.62138, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="UnderLight_2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85209, -0.62138, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="UnderLight_3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.30327, -0.684367, 0)
light_color = Color(0.286275, 0.65098, 0.909804, 1)
light_energy = 7.85
light_size = 0.523
omni_range = 0.5
omni_attenuation = 0.594603

[node name="BackLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.83258, -0.0661604, 0)
light_color = Color(0.8, 0.219608, 0.129412, 1)
light_energy = 2.317
omni_range = 0.616
omni_attenuation = 1.68179

[node name="CockpitLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53876, 0.503666, 0)
light_color = Color(0.831373, 0.364706, 0.341176, 1)
light_energy = 2.317
omni_range = 0.808038
omni_attenuation = 1.07178

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.958774, -0.162638, 0)

[node name="StabilizationWheelLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(-2.18557e-08, 3.78552e-08, 1, 0.866025, 0.5, 0, -0.5, 0.866025, -4.37114e-08, 0.948004, -0.0538858, -1.34795)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="StabilizationWheelRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(-2.18557e-08, -3.78552e-08, 1, -0.866025, 0.5, 0, -0.5, -0.866025, -4.37114e-08, 0.948004, -0.054, 1.348)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="StabilizationWheelLeft2" type="VehicleWheel3D" parent="."]
transform = Transform3D(-2.18557e-08, 3.78552e-08, 1, 0.866025, 0.5, 0, -0.5, 0.866025, -4.37114e-08, -3.28886, -0.0538858, -1.34795)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="StabilizationWheelRight2" type="VehicleWheel3D" parent="."]
transform = Transform3D(-2.18557e-08, -3.78552e-08, 1, -0.866025, 0.5, 0, -0.5, -0.866025, -4.37114e-08, -3.28886, -0.054, 1.348)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="StabilizationWheelFront" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 1.944, 0, 0)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="StabilizationWheelRear" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -3.82298, 0, 0)
wheel_roll_influence = 0.01
wheel_friction_slip = 10.0
suspension_stiffness = 200.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]PRESS E TO GET OFF[/center]
"

[node name="GetOffBike" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="RattleAudio" to="." method="_on_rattle_audio_finished"]
[connection signal="finished" from="MainHumAudio" to="." method="_on_main_hum_audio_finished"]
[connection signal="timeout" from="GetOffBike" to="." method="_on_get_off_bike_timeout"]
